Add icons, roles to HTML

--- a/index.html
+++ b/index.html
@@ -7,15 +7,26 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link rel="icon" sizes="192x192" href="/img/favicons/192.png">
+        <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/img/favicons/180.png">
+        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/img/favicons/152.png">
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/favicons/144.png">
+        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/img/favicons/120.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/favicons/114.png">
+        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/img/favicons/76.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/favicons/72.png">
+        <link rel="apple-touch-icon-precomposed" href="/img/favicons/57.png">
+        <meta name="msapplication-TileColor" content="#006b9f">
+        <meta name="msapplication-TileImage" content="/img/favicons/144.png">
+    
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-
         <div class="header-container">
-            <header class="wrapper clearfix">
+            <header role="banner" class="wrapper clearfix">
                 <h1 class="title">h1.title</h1>
-                <nav>
+                <nav role="navigation">
                     <ul>
                         <li><a href="#">nav ul li a</a></li>
                         <li><a href="#">nav ul li a</a></li>
@@ -56,8 +67,8 @@
         </div> <!-- #main-container -->
 
         <div class="footer-container">
-            <footer class="wrapper">
-                <h3>footer</h3>
+            <footer role="contentinfo" class="wrapper">
+                footer
             </footer>
         </div>
 
