Add normalize opentype

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <meta name="msapplication-TileImage" content="/img/favicons/144.png">
     
         <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/normalize-opentype.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
